# site-suitability

./: .gitignore  LICENSE  README.md  README_datasets.md  TODO  download_dependencies.sh  example_ci.yml  site-suitability.cabal  stack.yaml
.github/workflows/: example_ci.yml  master.yml
configs/: README.md  all.json  asakareh.json  asakareh_improved.json  asakareh_no_res.json  gen_protected.py  main.py  mine.json  run.txt  suh.json  suh_improved.json  suh_no_constraint_100.json  suh_no_constraint_200.json  suh_no_constraint_300.json  suh_no_constraint_400.json  suh_no_constraint_500.json  suh_no_elevation.json  suh_range_no_elevation.json  watson.json  watson_no_protected.json  watson_protected_0.0.json  watson_protected_0.016666666666666666.json  watson_protected_0.03333333333333333.json  watson_protected_0.05.json  watson_protected_0.1.json  watson_protected_0.15.json  watson_protected_0.15000000000000002.json  watson_protected_0.16666666666666666.json  watson_protected_0.18333333333333335.json  watson_protected_0.19.json  watson_protected_0.2.json
configs/old/: all.json  suh_no_constraint_500.json  suh_no_elevation.json  suh_range.json  watson_protected_0.0335.json  watson_protected_0.067.json  watson_protected_0.json
data/: README.md  crop_border.sh  download_roads.py  download_simple.py  land_use.sh
other/: plot_shared_histograms.py  vis.py
other/existing_solar_farms/: clip.py  existing_solar_farms.csv  existing_solar_farms.dbf  existing_solar_farms.shp  existing_solar_farms.shx  main.py
other/histograms/: README.md  main.py  main.r
other/histograms/data/: a_rs.csv  asakareh.csv  asakareh_improved.csv  asakareh_no_res.csv  s_rs.csv  sr_rs.csv  suh.csv  suh_improved.csv  suh_range.csv  suh_range_no_elevation.csv  w_rs.csv  watson.csv  (+1 more)
other/protected areas/: README.md  combined.r  main.r  main.sh  plot.py  preprocessing.sh
other/residential_areas/: README.md  main.sh  plot.py  preprocessing.sh
other/results_with_existing/: README.md  main.py  main.r
other/std_func_vis/: factor.py  hist_values_insolation.r  hist_values_slope.r  insolation.py  slope.py  vis.py
other/zonal_statistics/: main.py  protected.py
src/: Analysis.hs  Config.hs  Constraints.hs  Core.hs  Main.hs  Metadata.hs  Utils.hs
src/Config/: Adapter.hs  Combined.hs  ConstraintConfig.hs  Core.hs  CriteriaConfig.hs
src/Preprocessing/: Combined.hs  Constraints.hs  Core.hs
tests/: README.md  adhoc.py  edit_hashes.py  hashes.json  test.py
tif_to_png/: finals.py  gen.py  hist.r  image.py  main.r  map_layout.py  old.py
(+4 files in other folders)
