name:                site-suitability
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/akazukin5151/site-suitability#readme
license:             OtherLicense
license-file:        LICENSE
author:              Tsui Yik Ching
maintainer:          tsuiyikching@protonmail.com
copyright:           2021 Tsui Yik Ching
category:            Geography
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable site-suitability
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Weverything
                       -Wno-missing-exported-signatures
                       -Wno-missing-import-lists
                       -Wno-missed-specialisations
                       -Wno-all-missed-specialisations
                       -Wno-unsafe
                       -Wno-safe
                       -Wno-missing-safe-haskell-mode
                       -Wno-missing-local-signatures
                       -Wno-monomorphism-restriction
                       -Wno-implicit-prelude
                       -Wno-prepositive-qualified-module
                       -Wno-missing-deriving-strategies
  other-modules:       Preprocessing.Core,
                       Preprocessing.Combined,
                       Analysis,
                       Utils,
                       Core,
                       Constraints,
                       Config.CriteriaConfig,
                       Config.ConstraintConfig,
                       Config.Core,
                       Config.Combined,
                       Preprocessing.Core.Vector,
                       Preprocessing.Core.Raster,
                       Preprocessing.Constraints,
                       Metadata
  build-depends:       base >= 4.7 && < 5,
                       process == 1.6.*,
                       directory == 1.3.*,
                       aeson == 1.5.*,
                       bytestring >= 0.10.12,
                       utf8-string >= 0,
                       lens == 4.19.*,
                       lens-aeson == 1.1.*,
                       scientific == 0.3.*,
                       filepath == 1.4.*,
                       microlens == 0.4.*,
                       microlens-th == 0.4.*,
                       aeson >= 1.5,
                       text >= 1.2.3,
                       vector >= 0.12.3.1
